# energy-monitor-cli

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  publish_config.yaml  seed_config.yaml
.github/workflows/: build-push.yaml
configs/: publish_config.yaml  seed_config.yaml
configs/examples/: publish_config.example.yaml  seed_config.example.yaml
src/: main.rs
src/args/: db.rs  mod.rs  mqtt.rs
src/db/: mod.rs  models.rs  seed_config.rs
src/mqtt/: mod.rs  models.rs  publish_config.rs
